{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 16,
  "lineage": "7bfce9ce-6e30-5aa8-f772-a2e83e06d737",
  "resources": [
    {
      "module": "module.rds_replica",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:574124503382:security-group/sg-0f1327aadf6f89607",
            "description": "Allow inbound traffic from the security groups",
            "egress": [],
            "id": "sg-0f1327aadf6f89607",
            "ingress": [],
            "name": "eg-prod-reporting",
            "name_prefix": null,
            "owner_id": "574124503382",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eg-prod-reporting",
              "Namespace": "eg",
              "Stage": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-6b0b9313"
          },
          "dependencies": [
            "module.rds_replica.module.label.null_resource.default"
          ]
        }
      ]
    },
    {
      "module": "module.rds_replica",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-4229808623",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f1327aadf6f89607",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.rds_replica.aws_security_group.default",
            "module.rds_replica.module.label.null_resource.default"
          ]
        }
      ]
    },
    {
      "module": "module.rds_replica",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ingress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 1521,
            "id": "sgrule-2977797802",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f1327aadf6f89607",
            "self": false,
            "source_security_group_id": "sg-532d0608",
            "to_port": 1521,
            "type": "ingress"
          },
          "dependencies": [
            "module.rds_replica.aws_security_group.default",
            "module.rds_replica.module.label.null_resource.default"
          ]
        }
      ]
    }
  ]
}